[package]
name = "dlc-decrypter"
version = "0.2.1"
edition = "2024"
authors = ["Tobias Matt <t.matt81@gmail.com>"]
license = "MIT"
repository = "https://github.com/Bubblepoint/dlc-decoder"
description = "A decoder library for dlc files"

[dependencies]
error-chain = "0.12.4"
base64 = "0.22.1"
reqwest = "0.13.0"
rust-crypto = "0.2.36"
regex = "1.0.0"
tokio = { version = "1", features = ["full"] }

[lib]
name = "dlc_decrypter"