[package]
name = "dlc-decoder"
version = "0.2.2"
edition = "2024"
authors = ["Tobias Matt <t.matt81@gmail.com>"]
license = "MIT"
repository = "https://github.com/Bubblepoint/dlc-decoder"
description = "A decoder library for dlc files"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13", features = ["blocking"] }
rust-crypto = "0.2.36"
regex = "1.0.0"

[lib]
name = "dlc_decoder"
